# InitTools

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  InitTools.kdev4  ModuleStructure_ru.txt  README.md  build.sh  check_cpp_version.py  clangd.yaml  configure.sh
docs/: InitConsole.md
include/InitLogger/: InitLogger.h
include/InitTools/: .gitignore  InitConsole.h  InitDynamicLib.h  InitFiles.h  InitLocale.h  InitLogger.h  InitPaths.h  InitPlatform.h  InitTools.h  InitWindow.h  UNUSED_InitDynamicLib.h
include/InitTools/InitConsole/: InitConsole_Logger.h
include/InitTools/InitPlatform/: InitPlatform_Windows.h
include/MoParser/: INFO.txt
modules/InitConsole/: CMakeLists.txt
modules/InitConsole/include/InitTools/: InitConsole.h
modules/InitConsole/src/: InitConsole.cpp
modules/InitConsole/src/InitConsole/: Logger.cpp
modules/InitLocale/: CMakeLists.txt
modules/InitLocale/include/InitTools/: InitLocale.hpp
modules/InitLocale/src/: InitLocale.cpp
modules/InitLocale/src/InitLocale/: LocaleManager.cpp
modules/InitWindow/: CMakeLists.txt
modules/InitWindow/include/InitTools/: InitWindow.h  InitWindow.hpp
modules/InitWindow/patches/: glad-set-min-cmake-3.24.patch
modules/InitWindow/src/: InitWindow.cpp
modules/InitWindow/src/InitWindow/: WindowManager.cpp
modules/InitWindow/src/InitWindow/WindowManager/: Callbacks.cpp  Set-Get.cpp
modules/Templates/: extern_function.txt
old/: CMakeLists.txt  Information.h.in
old/include/InitTools/: .gitignore  InitConsole.h  InitLocale.h  InitTools.h  InitWindow.h
old/include/MoParser/: INFO.txt  MoParser.h
old/resources/locales/en/LC_MESSAGES/: InitTools.h  InitTools.po  InitWindow.h  InitWindow.mo  InitWindow.po
old/resources/locales/ru/LC_MESSAGES/: InitConsole.mo  InitTools.h  InitTools.po  InitWindow.h  InitWindow.mo  InitWindow.po
old/src/InitTools/InitConsole/: Logger.cpp
old/src/InitTools/InitFiles/: InitFiles.cpp
old/src/InitTools/InitLocale/: InitLocale.cpp
old/src/InitTools/InitPlatform/: InitPlatform.cpp  Linux.cpp
old/src/InitTools/InitTools/: InitTools.cpp  InitTools_MOs.cpp
old/src/InitTools/InitWindow/: InitWindow.cpp  InitWindowClassCallback.cpp  InitWindowClassThread.cpp
old/src/MoParser/: MoParser.cpp
old/tests/: InitWindow.cpp  global.cpp
patches/: glm-set-min-cmake-3.24.patch
resources/locales/: info.txt
resources/locales/!pot/: InitConsole.pot  InitTools.pot  InitWindow.pot
resources/locales/.pot/: InitTools.pot
resources/locales/en/LC_MESSAGES/: InitConsole.h  InitConsole.mo  InitConsole.po  InitTools.mo
resources/locales/ru/LC_MESSAGES/: InitConsole.h  InitConsole.po  InitTools.mo  InitWindow.h  InitWindow.mo  InitWindow.po
src/: InitLogger.cpp
src/InitTools/: .gitignore
src/InitTools/InitConsole/: InitConsole.cpp  Logger.cpp
src/InitTools/InitConsole/InitConsole_Logger/: InitConsole_Logger.cpp
src/InitTools/InitDynamicLib/: InitDynamicLib.cpp  InitDynamicLibFunction.cpp
src/InitTools/InitFiles/: InitFiles.cpp
src/InitTools/InitLocale/: InitLocale.cpp  InitLocale_Locale.cpp  InitLocale_LocaleManager.cpp
src/InitTools/InitLogger/: InitLogger.cpp
src/InitTools/InitPaths/: InitPaths.cpp
src/InitTools/InitPlatform/: InitPlatform.cpp  Linux.cpp  Windows.cpp
src/InitTools/InitPlatform/InitPlatform_Windows/: InitPlatform_Windows.cpp
src/InitTools/InitTools/: InitTools.cpp  InitTools_MOs.cpp
src/InitTools/InitWindow/: InitWindow.cpp  InitWindowClass.cpp  InitWindowClassCallbacks.cpp  InitWindowClassThreads.cpp
src/InitTools/UNUSED_InitDynamicLib/: InitDynamicLib.cpp  InitDynamicLibFunction.cpp
tests/: InitLocale.cpp  InitWindow.cpp  demo.cpp  global.cpp  main.cpp
